home page skip button jump - issue

--- a/docroot/sites/all/themes/ambitious/sass/forms.scss
+++ b/docroot/sites/all/themes/ambitious/sass/forms.scss
@@ -229,4 +229,7 @@ box-shadow: 0px 0px #c63502;
         }
       }
       
+.ajax-progress{
+   position: absolute;
+}
 }
